--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>selenium-support</artifactId>
             <version>4.7.2</version>
         </dependency>
+        <dependency>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.7.1</version>
+        </dependency>
 
     </dependencies>
 
